[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hue-entertainment-pykit"
version = "0.9.0"
authors = [
    {name = "Dominik Hrdas"}
]
description = "A comprehensive Python toolkit for Philips Hue Entertainment API"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities"
]
requires-python = ">=3.10, <=3.12.1"
dependencies = [
    "certifi==2023.11.17",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "colorama==0.4.6",
    "idna==3.6",
    "ifaddr==0.2.0",
    "mypy-extensions==1.0.0",
    "packaging==23.2",
    "pathspec==0.12.1",
    "platformdirs==4.1.0",
    "python-mbedtls==2.8.0",
    "requests==2.31.0",
    "typing_extensions==4.9.0",
    "urllib3==2.1.0",
    "zeroconf==0.131.0"
]
keywords = ["philips", "hue", "lights", "entertainment", "api"]

[project.urls]
Repository = "https://github.com/hrdasdominik/hue-entertainment-pykit"

[options]
package_dir = "src"
