[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hue-entertainment-pykit"
version = "0.9.1"
authors = [
    {name = "Dominik Hrdas"}
]
description = "A comprehensive Python toolkit for Philips Hue Entertainment API"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities"
]
requires-python = ">=3.10, <=3.12.4"
dependencies = [
    "certifi==2024.7.4",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "colorama==0.4.6",
    "idna==3.7",
    "ifaddr==0.2.0",
    "mypy-extensions==1.0.0",
    "packaging==24.1",
    "pathspec==0.12.1",
    "platformdirs==4.2.2",
    "python-mbedtls==2.10.1",
    "requests==2.32.3",
    "typing_extensions==4.12.2",
    "urllib3==2.2.2",
    "zeroconf==0.132.2"
]
keywords = ["philips", "hue", "lights", "entertainment", "api"]

[project.urls]
Repository = "https://github.com/hrdasdominik/hue-entertainment-pykit"

[options]
package_dir = "src"
